[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "morse-transcriber"
version = "0.1.0"
description = "A CLI tool to convert text to morse-code and vice versa."
authors = [
    { name = "ARYAN RAJ", email = "nikhilaryan0928@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = ["pyperclip>=1.8.0"]

[project.urls]
Repository = "https://github.com/nikkhilaaryan/morse-transcriber"

[project.scripts]
morse-transcriber = "src.interfaces.cli:main"

[tool.pytest.ini_options]
pythonpath = [
    "."
]
testpaths = [
    "tests"
]
